﻿dotNetRDF
=========

A Library for RDF manipulation and parsing in .Net using C# 3.0

Robert Vesse 2009-10
rvesse@vdesign-studios.com

Change Log
----------

This represents a summary of additions, changes and removals for the 0.4.0 release of dotNetRDF

Added
- Support for Variable Nodes
- New SimpleN3RulesReasoner which can process simple N3 rules of the form { } => { }

Changed
- Bug Fixes
 - Notation 3 Parser allows variable quantification directives in Graph Literals
 - Queries with a DISTINCT modifer and a LIMIT were optimised for lazy evaluation when they shouldn't have been
 - Queries containing GRAPH clauses no longer unintentionally introduce a Product in some places
 - RDF/XML parser now correctly treats empty elements with rdf:datatype as literal properties rather than empty properties
- Parsing
 - Notation 3 Parser supports Variables, @forSome and @forAll fully
- Query Improvements
 - Leviathan SPARQL engine now operates over an ISparqlDataset which is an abstraction between the data and the
   SPARQL engine which allows for out of memory datasets to be queried and updated with Leviathan
 - Reverse Translation from ISparqlAlgebra to SparqlQuery
 - Optimisation for queries using ORDER BY under some circumstances
- ASP.Net Improvements
 - All HTTP Handlers output CORS headers so RDF/SPARQL content is accessible to JS clients
 - SparqlServer now supports omitting any of the processors (provided at least one is specified) so you can create
   endpoints with some features explicitly disabled

Removed
- Obsolete VDS.RDF.Web classes removed
- Removed obsolete methods related to Labyrinth SPARQL engine
- Removed dataset management methods from ITripleStore and implemenations

   



